tests/expectations/compiler/function/no_return.out
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:2:5
     |
   2 |     fn main() -> u8 {}
     |     ^^^^^^^^^^^^^^^^^^
